# ConsumeRESTfulAPI

./: .gitignore
C-CLI-storage/src/ConsumeRESTfulAPI/: CMakeLists.txt  application.c  application.h  database.c  database.h  main.c
C-CLI-storage/src/ConsumeRESTfulAPI/utils/: sha256.h
C-frontend/curl/output/CMake/: cmake_uninstall.cmake
C-frontend/src/ConsumeRESTfulAPI/: CMakeLists.txt  application.c  application.h  database.c  local_storage.c  local_storage.h  main.c
C-frontend/src/ConsumeRESTfulAPI/utils/: regular_expression.c  regular_expression.h  restful.h  sha256.c  sha256.h  util_string.c  util_string.h
C/src/ConsumeRESTfulAPI/: CMakeLists.txt  local_storage.h
C/src/ConsumeRESTfulAPI/utils/: restful.c
CSharp-backend/ConsumeRESTfulAPI/: ConsumeRESTfulAPI.csproj  MappingProfile.cs  Program.cs  WeatherForecast.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Command/CreateDevice/: CreateDeviceCommand.cs  CreateDeviceHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Command/DeleteDevice/: DeleteDeviceCommand.cs  DeleteDeviceHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Command/UpdateDevice/: UpdateDeviceCommand.cs  UpdateDeviceHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Query/GetDeviceById/: GetDeviceByIdHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Query/GetDeviceByIdEvenDeleted/: GetDeviceByIdEvenDeletedHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Query/GetDeviceList/: GetDeviceListHandler.cs  GetDeviceListQuery.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/Query/GetDeviceListIncludeDeleted/: GetDeviceListIncludeDeletedHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Devices/ViewModel/: DeviceViewModel.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/Command/CreateProduct/: CreateProductHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/Command/UpdateProduct/: UpdateProductCommand.cs  UpdateProductHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/Query/GetProductById/: GetProductByIdQuery.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/Query/GetProductByIdEvenDeleted/: GetProductByIdEvenDeletedHandler.cs  GetProductByIdEvenDeletedQuery.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/Query/GetProductList/: GetProductListHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/Query/GetProductListIncludeDeleted/: GetProductListIncludeDeletedHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Products/ViewModel/: ProductViewModel.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Command/ChangePassword/: ChangePasswordHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Command/CreateUser/: CreateUserCommand.cs  CreateUserHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Command/DeleteUser/: DeleteUserCommand.cs  DeleteUserHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Command/RestoreUser/: RestoreUserCommand.cs  RestoreUserHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Command/UpdateUser/: UpdateUserCommand.cs  UpdateUserHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Command/UpdateUserEvenDeleted/: UpdateUserEvenDeletedCommand.cs  UpdateUserEvenDeletedHandler.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Query/GetUserById/: GetUserByIdHandler.cs  GetUserByIdQuery.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Query/GetUserByIdEvenDeleted/: GetUserByIdEvenDeletedHandler.cs  GetUserByIdEvenDeletedQuery.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/Query/GetUserList/: GetUserListHandler.cs  GetUserListQuery.cs
CSharp-backend/ConsumeRESTfulAPI/CQRS/Users/ViewModel/: UserViewModel.cs
CSharp-backend/ConsumeRESTfulAPI/Controllers/: ProductController.cs  UserController.cs  WeatherForecastController.cs
CSharp-backend/ConsumeRESTfulAPI/Migrations/: 20231125033337_initial.Designer.cs  20231125033337_initial.cs  20231125035900_UserHasBirthdate.cs
CSharp-backend/ConsumeRESTfulAPI/Model/: AppDbContext.cs  Device.cs  Product.cs  User.cs
CSharp-backend/ConsumeRESTfulAPI/Model/Configuration/: DeviceConfiguration.cs  ProductConfiguration.cs  UserConfiguration.cs
CSharp-backend/ConsumeRESTfulAPI/Model/Interface/: IAppDbContext.cs
CSharp-backend/ConsumeRESTfulAPI/Properties/: launchSettings.json
CSharp-backend/ConsumeRESTfulAPI/Services/: DeviceService.cs
CSharp-backend/ConsumeRESTfulAPI/Services/Interface/: IDeviceService.cs
CSharp_backend/ConsumeRESTfulAPI/: ConsumeRESTfulAPI.csproj  ConsumeRESTfulAPI.http  MappingProfile.cs  Program.cs
CSharp_backend/ConsumeRESTfulAPI/Model/: Device.cs  User.cs
C_frontend/src/ConsumeRESTfulAPI/: application.c  application.h  local_storage.c  main.c
C_frontend/src/ConsumeRESTfulAPI/utils/: sha256.h
C_frontend/src/build-ConsumeRESTfulAPI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
C_frontend/src/build-ConsumeRESTfulAPI-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
backend-csharp/: ConsumeRESTfulAPI.sln
backend-csharp/ConsumeRESTfulAPI/: ConsumeRESTfulAPI.csproj  MappingProfile.cs  Program.cs
backend-csharp/ConsumeRESTfulAPI/CQRS/Devices/ViewModel/: DeviceViewModel.cs
backend-csharp/ConsumeRESTfulAPI/Controllers/: DeviceController.cs
backend-csharp/ConsumeRESTfulAPI/Migrations/: 20231125035900_UserHasBirthdate.Designer.cs  AppDbContextModelSnapshot.cs
backend-csharp/ConsumeRESTfulAPI/Model/: AppDbContext.cs  User.cs
backend-csharp/ConsumeRESTfulAPI/Model/Configuration/: DeviceConfiguration.cs  ProductConfiguration.cs
backend-csharp/ConsumeRESTfulAPI/Services/: ProductService.cs  UserService.cs
backend-csharp/ConsumeRESTfulAPI/Services/Interface/: IProductService.cs  IUserService.cs
backend-csharp/ConsumeRESTfulAPI/Utils/: Util.cs
c-frontend-not-finished/src/ConsumeRESTfulAPI/: CMakeLists.txt  application.h
c-frontend-not-finished/src/ConsumeRESTfulAPI/utils/: restful.c
frontend-c/src/ConsumeRESTfulAPI/: application.c  local_storage.c  main.c
frontend-c/src/ConsumeRESTfulAPI/utils/: restful.h
(+102 files in other folders)
